--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,15 @@
-logging.level.=INFO
-
 # server side
-
-distance.between.markers=2000
+    # BoundingBoxService
 max.boundingbox.diagonal=100000
-min.markers.in.circle=100
-radius.around.marker=1000
 
+    # CoverageAlgorithms
+distance.between.markers=2000
+radius.around.marker=1000
 lat.default.step=0.02
 lng.default.step=0.03
 
-
+min.radar.search.result=100
 # client side
-
 icon.azure.48="http://icons.iconarchive.com/icons/icons-land/vista-map-markers/48/Map-Marker-Ball-Azure-icon.png"
 icon.azure.32="http://icons.iconarchive.com/icons/icons-land/vista-map-markers/32/Map-Marker-Ball-Azure-icon.png"
 
@@ -22,4 +19,3 @@ icon.pink.48="http://icons.iconarchive.com/icons/icons-land/vista-map-markers/48
 marker.clickable=true
 map.zoom=10
 
-min.radar.search.result=100
