Mega refactoring: * change URL * change Controller (one instead two) * Simplified some classes logic

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,18 +3,21 @@
 max.boundingbox.diagonal=100000
 
     # CoverageAlgorithms
-distance.between.markers=1500
+distance.neighbor.markers=3000
 radius.around.marker=1000
-lat.default.step=0.02
-lng.default.step=0.03
+min.radar.search.places=100
+max.radar.search.places=201
+radar.search.radius.eps=50
 
-min.radar.search.result=100
 # client side
 icon.azure.48="http://icons.iconarchive.com/icons/icons-land/vista-map-markers/48/Map-Marker-Ball-Azure-icon.png"
 icon.azure.32="http://icons.iconarchive.com/icons/icons-land/vista-map-markers/32/Map-Marker-Ball-Azure-icon.png"
 
 icon.pink.32="http://icons.iconarchive.com/icons/icons-land/vista-map-markers/32/Map-Marker-Ball-Pink-icon.png"
 icon.pink.48="http://icons.iconarchive.com/icons/icons-land/vista-map-markers/48/Map-Marker-Ball-Pink-icon.png"
+
+icon.search.48="http://icons.iconarchive.com/icons/devcom/network/48/signal-Vista-icon.png"
+icon.search.32="http://icons.iconarchive.com/icons/devcom/network/32/signal-Vista-icon.png"
 
 marker.clickable=true
 map.zoom=10
