Change icon/jsp/properties. Added new icons. Radius sent from server side.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,22 +3,30 @@
 max.boundingbox.diagonal=100000
 
     # CoverageAlgorithms
-distance.neighbor.markers=3000
+distance.neighbor.markers=5000
 radius.around.marker=1000
 min.radar.search.places=100
 max.radar.search.places=201
 radar.search.radius.eps=50
 
 # client side
-icon.azure.48="http://icons.iconarchive.com/icons/icons-land/vista-map-markers/48/Map-Marker-Ball-Azure-icon.png"
-icon.azure.32="http://icons.iconarchive.com/icons/icons-land/vista-map-markers/32/Map-Marker-Ball-Azure-icon.png"
+    # icons
+icon.place.azure.32=http://icons.iconarchive.com/icons/icons-land/vista-map-markers/32/Map-Marker-Ball-Azure-icon.png
+icon.place.azure.48=http://icons.iconarchive.com/icons/icons-land/vista-map-markers/48/Map-Marker-Ball-Azure-icon.png
 
-icon.pink.32="http://icons.iconarchive.com/icons/icons-land/vista-map-markers/32/Map-Marker-Ball-Pink-icon.png"
-icon.pink.48="http://icons.iconarchive.com/icons/icons-land/vista-map-markers/48/Map-Marker-Ball-Pink-icon.png"
+icon.place.pink.32=http://icons.iconarchive.com/icons/icons-land/vista-map-markers/32/Map-Marker-Ball-Pink-icon.png
+icon.place.pink.48=http://icons.iconarchive.com/icons/icons-land/vista-map-markers/48/Map-Marker-Ball-Pink-icon.png
 
-icon.search.48="http://icons.iconarchive.com/icons/devcom/network/48/signal-Vista-icon.png"
-icon.search.32="http://icons.iconarchive.com/icons/devcom/network/32/signal-Vista-icon.png"
+icon.place.green.32=http://icons.iconarchive.com/icons/icons-land/vista-map-markers/32/Map-Marker-Ball-Chartreuse-icon.png
+icon.place.green.48=http://icons.iconarchive.com/icons/icons-land/vista-map-markers/48/Map-Marker-Ball-Chartreuse-icon.png
 
+icon.search.32=http://icons.iconarchive.com/icons/icons-land/vista-map-markers/32/Map-Marker-Marker-Outside-Azure-icon.png
+icon.search.48=http://icons.iconarchive.com/icons/icons-land/vista-map-markers/48/Map-Marker-Marker-Outside-Azure-icon.png
+
+icon.user.here.32=http://icons.iconarchive.com/icons/icons-land/vista-map-markers/32/Map-Marker-Flag-3-Right-Pink-icon.png
+icon.user.here.48=http://icons.iconarchive.com/icons/icons-land/vista-map-markers/48/Map-Marker-Flag-3-Right-Pink-icon.png
+
+    # map JSP
 marker.clickable=true
 map.zoom=10
 
