place details! Integration with mongoDB

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,10 @@
     # BoundingBoxService
 max.boundingbox.diagonal=100000
 
-    # CoverageAlgorithms
+    # Algorithms
 distance.neighbor.markers=5000
 radius.around.marker=1000
-min.radar.search.places=99
+min.radar.search.places=150
 max.radar.search.places=200
 radar.search.radius.eps=1500
 
