--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,22 @@
-# server side
-    # BoundingBoxService
+# Server
+    # BoundingBox
 max.boundingbox.diagonal=100000
 
-    # Algorithms
-distance.neighbor.markers=5000
-radius.around.marker=1000
-min.radar.search.places=150
-max.radar.search.places=200
-radar.search.radius.eps=1500
+    # Searcher
+neighbor.searchers.distance=3000
+default.searcher.radius=1000
 
-# client side
+    # Google maps
+google.maps.max.places.search=200
+google.maps.min.places.search=150
+google.maps.places.search.rad.eps=500
+
+    # Foursquare
+foursquare.max.venues.search=50
+foursquare.min.venues.search=25
+foursquare.venues.search.rad.eps=500
+
+# Client
     # icons
 icon.place.azure.32=http://icons.iconarchive.com/icons/icons-land/vista-map-markers/32/Map-Marker-Ball-Azure-icon.png
 icon.place.azure.48=http://icons.iconarchive.com/icons/icons-land/vista-map-markers/48/Map-Marker-Ball-Azure-icon.png
@@ -20,13 +27,7 @@ icon.place.pink.48=http://icons.iconarchive.com/icons/icons-land/vista-map-marke
 icon.place.green.32=http://icons.iconarchive.com/icons/icons-land/vista-map-markers/32/Map-Marker-Ball-Chartreuse-icon.png
 icon.place.green.48=http://icons.iconarchive.com/icons/icons-land/vista-map-markers/48/Map-Marker-Ball-Chartreuse-icon.png
 
-icon.search.32=http://icons.iconarchive.com/icons/icons-land/vista-map-markers/32/Map-Marker-Marker-Outside-Azure-icon.png
-icon.search.48=http://icons.iconarchive.com/icons/icons-land/vista-map-markers/48/Map-Marker-Marker-Outside-Azure-icon.png
+icon.search=http://icons.iconarchive.com/icons/icons-land/vista-map-markers/48/Map-Marker-Marker-Outside-Azure-icon.png
+icon.search.error=http://icons.iconarchive.com/icons/oxygen-icons.org/oxygen/48/Actions-application-exit-icon.png
 
-icon.user.here.32=http://icons.iconarchive.com/icons/icons-land/vista-map-markers/32/Map-Marker-Flag-3-Right-Pink-icon.png
-icon.user.here.48=http://icons.iconarchive.com/icons/icons-land/vista-map-markers/48/Map-Marker-Flag-3-Right-Pink-icon.png
-
-    # map JSP
-marker.clickable=true
-map.zoom=10
-
+icon.user=http://icons.iconarchive.com/icons/icons-land/vista-map-markers/48/Map-Marker-Flag-3-Right-Pink-icon.png
