--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,10 @@
+logging.level.com.google.maps.GeoApiContext=OFF
+
 # Server
+    # Kernel
+kernel.iterations.count=10000
+kernels.default.number=30
+
     # BoundingBox
 max.boundingbox.diagonal=100000
 
@@ -15,6 +21,8 @@ google.maps.places.search.rad.eps=500
 foursquare.max.venues.search=50
 foursquare.min.venues.search=25
 foursquare.venues.search.rad.eps=500
+foursquare.min.checkins.count=500
+foursquare.min.user.count=100
 
 # Client
     # icons
@@ -30,4 +38,8 @@ icon.place.green.48=http://icons.iconarchive.com/icons/icons-land/vista-map-mark
 icon.search=http://icons.iconarchive.com/icons/icons-land/vista-map-markers/48/Map-Marker-Marker-Outside-Azure-icon.png
 icon.search.error=http://icons.iconarchive.com/icons/oxygen-icons.org/oxygen/48/Actions-application-exit-icon.png
 
-icon.user=http://icons.iconarchive.com/icons/icons-land/vista-map-markers/48/Map-Marker-Flag-3-Right-Pink-icon.png
+icon.user=http://icons.iconarchive.com/icons/icons-land/vista-map-markers/48/Map-Marker-Flag-3-Right-Azure-icon.png
+
+icon.kernel=http://icons.iconarchive.com/icons/musett/glow-ball/32/Glow-Ball-icon.png
+  #http://icons.iconarchive.com/icons/oxygen-icons.org/oxygen/32/Places-bookmarks-icon.png
+
