--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 logging.level.com.google.maps.GeoApiContext=OFF
+logging.level.org.springframework.data.mongodb.core.convert.CustomConversions=OFF
+
 
 # Server
     # Kernel
@@ -13,12 +15,12 @@ neighbor.searchers.distance=3000
 default.searcher.radius=1000
 
     # Google maps
-google.maps.max.places.search=200
+google.maps.max.places.search=199
 google.maps.min.places.search=150
 google.maps.places.search.rad.eps=500
 
     # Foursquare
-foursquare.max.venues.search=50
+foursquare.max.venues.search=49
 foursquare.min.venues.search=25
 foursquare.venues.search.rad.eps=500
 foursquare.min.checkins.count=500
