Refactoring, clustering package.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,19 @@
 logging.level.com.google.maps.GeoApiContext=OFF
 logging.level.org.springframework.data.mongodb.core.convert.CustomConversions=OFF
-
+logging.level.org.springframework.context.annotation.AnnotationConfigApplicationContext=OFF
 
 # Server
     # Kernel
 kernel.iterations.count=10000
-kernels.default.number=20
+kernel.default.count=20
+kernel.default.radius=900
+
+    # Clustering
+cluster.min.places=5
+cluster.max.radius=700
+cluster.min.radius=250
+cluster.place.max.distance=500
+cluster.place.avg.distance=300
 
     # BoundingBox
 max.boundingbox.diagonal=100000
@@ -15,8 +23,8 @@ neighbor.searchers.distance=5000
 default.searcher.radius=500
 
     # Google maps
-google.maps.max.places.search=40
-google.maps.min.places.search=30
+google.maps.max.places.search=49
+google.maps.min.places.search=25
 google.maps.places.search.rad.eps=200
 
     # Foursquare
@@ -28,20 +36,11 @@ foursquare.min.user.count=100
 
 # Client
     # icons
-icon.place.azure.32=http://icons.iconarchive.com/icons/icons-land/vista-map-markers/32/Map-Marker-Ball-Azure-icon.png
-icon.place.azure.48=http://icons.iconarchive.com/icons/icons-land/vista-map-markers/48/Map-Marker-Ball-Azure-icon.png
-
-icon.place.pink.32=http://icons.iconarchive.com/icons/icons-land/vista-map-markers/32/Map-Marker-Ball-Pink-icon.png
-icon.place.pink.48=http://icons.iconarchive.com/icons/icons-land/vista-map-markers/48/Map-Marker-Ball-Pink-icon.png
-
-icon.place.green.32=http://icons.iconarchive.com/icons/icons-land/vista-map-markers/32/Map-Marker-Ball-Chartreuse-icon.png
-icon.place.green.48=http://icons.iconarchive.com/icons/icons-land/vista-map-markers/48/Map-Marker-Ball-Chartreuse-icon.png
-
 icon.search=http://icons.iconarchive.com/icons/icons-land/vista-map-markers/48/Map-Marker-Marker-Outside-Azure-icon.png
 icon.search.error=http://icons.iconarchive.com/icons/oxygen-icons.org/oxygen/48/Actions-application-exit-icon.png
 
 icon.user=http://icons.iconarchive.com/icons/icons-land/vista-map-markers/48/Map-Marker-Flag-3-Right-Azure-icon.png
 
 icon.kernel=http://icons.iconarchive.com/icons/musett/glow-ball/32/Glow-Ball-icon.png
-  #http://icons.iconarchive.com/icons/oxygen-icons.org/oxygen/32/Places-bookmarks-icon.png
 
+icon.path.prefix=resources/icons/
