--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     compile('org.json:json:20090211')
 	compile('org.apache.commons:commons-math3:3.6.1')
 	compile('org.springframework.data:spring-data-mongodb:1.9.1.RELEASE')
+	compile('org.jfree:jfreechart:1.0.19')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
