Cluster class created, Icon enum integration, DarkHole algorithm improved, clustering module improved.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,15 +5,16 @@ logging.level.org.springframework.context.annotation.AnnotationConfigApplication
 # Server
     # Kernel
 kernel.iterations.count=10000
-kernel.default.count=20
-kernel.default.radius=900
+kernel.default.count=30
+kernel.default.radius=800
 
     # Clustering
 cluster.min.places=5
-cluster.max.radius=700
+cluster.max.radius=850
 cluster.min.radius=250
 cluster.place.max.distance=500
-cluster.place.avg.distance=300
+cluster.place.avg.distance=275
+cluster.max.in.city=15
 
     # BoundingBox
 max.boundingbox.diagonal=100000
