Improve interface and ML algorithms

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=80
+
 logging.level.com.google.maps.GeoApiContext=OFF
 logging.level.org.springframework.data.mongodb.core.convert.CustomConversions=OFF
 logging.level.org.springframework.context.annotation.AnnotationConfigApplicationContext=OFF
@@ -12,16 +14,14 @@ kernel.default.radius=800
 cluster.min.places=5
 cluster.max.radius=850
 cluster.min.radius=250
-cluster.place.max.distance=500
-cluster.place.avg.distance=275
 cluster.max.in.city=15
 
     # BoundingBox
 max.boundingbox.diagonal=100000
 
     # Searcher
-neighbor.searchers.distance=5000
-default.searcher.radius=500
+neighbor.searchers.distance=4000
+default.searcher.radius=1000
 
     # Google maps
 google.maps.max.places.search=49
