Percents in placeTypes, filtering features, some improvements in ML

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=80
+#server.port=80
 
 logging.level.com.google.maps.GeoApiContext=OFF
 logging.level.org.springframework.data.mongodb.core.convert.CustomConversions=OFF
@@ -9,6 +9,7 @@ logging.level.org.springframework.context.annotation.AnnotationConfigApplication
 kernel.iterations.count=10000
 kernel.default.count=30
 kernel.default.radius=800
+kernel.kmeans.run.count=10
 
     # Clustering
 cluster.min.places=5
