--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,25 +24,15 @@ max.boundingbox.diagonal=100000
 neighbor.searchers.distance=4000
 default.searcher.radius=1000
 
-    # Google maps
-google.maps.max.places.search=49
-google.maps.min.places.search=15
-google.maps.places.search.rad.eps=200
-
-    # Foursquare
-foursquare.max.venues.search=49
-foursquare.min.venues.search=25
-foursquare.venues.search.rad.eps=250
-foursquare.min.checkins.count=500
-foursquare.min.user.count=100
+    # Place
+max.places.search=49
+min.places.search=15
+places.search.rad.eps=150
 
 # Client
     # icons
 icon.search=http://icons.iconarchive.com/icons/icons-land/vista-map-markers/48/Map-Marker-Marker-Outside-Azure-icon.png
 icon.search.error=http://icons.iconarchive.com/icons/oxygen-icons.org/oxygen/48/Actions-application-exit-icon.png
-
 icon.user=http://icons.iconarchive.com/icons/icons-land/vista-map-markers/64/Map-Marker-Flag-2-Right-Pink-icon.png
-
 icon.kernel=http://icons.iconarchive.com/icons/musett/glow-ball/32/Glow-Ball-icon.png
-
 icon.path.prefix=resources/icons/
