--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#server.port=80
+server.port=80
 
 logging.level.com.google.maps.GeoApiContext=OFF
 logging.level.org.springframework.data.mongodb.core.convert.CustomConversions=OFF
