--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 server.port=80
 
+logging.file=geogeogeo.log
+
 logging.level.com.google.maps.GeoApiContext=OFF
 logging.level.org.springframework.data.mongodb.core.convert.CustomConversions=OFF
 logging.level.org.springframework.context.annotation.AnnotationConfigApplicationContext=OFF
