--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
-server.port=80
+#server.port=80
+server.port=8443
+server.ssl.key-store=classpath:yourkeystore.jks
+server.ssl.key-store-password=changeit
+server.ssl.key-password=changeit
 
 logging.file=geogeogeo.log
 
