--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #server.port=80
 server.port=8443
-server.ssl.key-store=classpath:yourkeystore.jks
+server.ssl.key-store=yourkeystore.jks
 server.ssl.key-store-password=changeit
 server.ssl.key-password=changeit
 
