troubles with ssl

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 #server.port=80
 server.port=8443
-server.ssl.key-store=yourkeystore.jks
+server.ssl.key-store=geogeogeo_me.p7b
+server.ssl.key-alias=tomcat
+server.ssl.key-store-type=PKCS7
 server.ssl.key-store-password=changeit
 server.ssl.key-password=changeit
 
