--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,13 @@ jar {
 	version = '0.0.1-SNAPSHOT'
 }
 
+compileJava {
+	options.fork = 'true'
+	options.forkOptions.with {
+		memoryMaximumSize = '800m'
+	}
+}
+
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
